@@ -17,8 +17,15 @@
       [IO::Socket]
         close
         setsockopt
+        connect
+        listen
+        bind
+        shutdown
+        socket
+        
     * Remove the set_sockopt method from the IO::Socket class.
     * Remove the getsockopt method from the IO::Socket class.
+    * The type of Timeout field in the IO::Socket becomes double.
   [Changes]
     * The write method in the IO::File returns written length.
 0.210 2023-11-18
